tests/error/inout_errors/unused_after_call.err
Error: Drop violation (at $FILE:15:9)
   | 
13 | 
14 | @guppy(module)
15 | def test(q: qubit @owned) -> None:
   |          ^^^^^^^^^^^^^^^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
